--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,181 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 2;
+  font-family: "Roboto", sans-serif;
+  line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #fff;
+  background-color: #22222a;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1rem;
+  height: 2rem;
+  font-weight: 900;
+  background-color: #7d42ff;
+  border-radius: 0 0 10px 10px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+}
+.form-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 1rem;
+}
+
+/* Set a max-width for the form container and center it horizontally */
+form {
+  max-width: 500px;
+  width: 60%;
+  background-color: #242129;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+}
+
+form h3 {
+  padding: 4px;
+  margin: 0 0 10px 0;
+  background: linear-gradient(90deg, #7d42ff 0%, #b055ff 100%);
+  border-radius: 10px 10px 0 0;
+  text-align: center;
+  font-weight: 700;
+}
+
+/* Style the form labels */
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 16px;
+}
+
+.text-inputs {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 2px;
+  padding: 0 10px;
+}
+
+/* Style the input fields */
+input[type="text"] {
+  border-radius: 4px;
+  border: none;
+  margin-bottom: 10px;
+  width: 100%;
+  height: 32px;
+  font-size: 0.75rem;
+  padding: 0 10px;
+}
+input[type="text"]:focus {
+  outline: none;
+}
+
+input[type="text"]::placeholder {
+  color: #999;
+}
+
+/* Style the "Add Text" button */
+.add-text-button {
+  background-color: #7d42ff;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 0.75rem;
+  transition: all 0.2s ease-in-out;
+}
+
+.add-text-button:hover {
+  background-color: #5f21e3;
+}
+
+.remove-text-button {
+  background-color: #7d42ff;
+  color: white;
+  border: none;
+  padding: 0 16px;
+  margin: 0 0 10px 4px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 0.75rem;
+  transition: all 0.2s ease-in-out;
+}
+
+.remove-text-button:hover {
+  background-color: #5f21e3;
+}
+
+/* Style the submit button */
+.submit-button {
+  background-color: #7d42ff;
+  color: white;
+  border: none;
+  padding: 8px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 0.75rem;
+  transition: all 0.2s ease-in-out;
+}
+
+.submit-button:hover {
+  background-color: #5f21e3;
+}
+
+.submit-button:disabled {
+  background-color: #f2f2f2;
+  cursor: not-allowed;
+}
+
+/* Style the merged text output */
+.merged-text {
+  width: 35%;
+  font-weight: 400;
+  font-size: 1rem;
+  background-color: #242129;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 1);
+}
+
+.merged-text h3 {
+  padding: 4px;
+  margin: 0;
+  background: linear-gradient(90deg, #b055ff 0%, #7d42ff 100%);
+  border-radius: 10px 10px 0 0;
+  text-align: center;
+  font-weight: 700;
+}
+.merged-text p {
+  padding: 8px;
+  margin: 0;
+  font-size: 0.75rem;
+}
+
+.clear-button {
+  background-color: #7d42ff;
+  color: white;
+  border: none;
+  padding: 8px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 0.75rem;
+  transition: all 0.2s ease-in-out;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0.25rem 0.5rem 1rem 0.5rem;
 }
