--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
 }
 
 .navbar {
+  margin-top: 4px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -24,9 +25,9 @@
   padding: 0 1rem;
   height: 2rem;
   font-weight: 900;
-  background-color: #7d42ff;
-  border-radius: 0 0 10px 10px;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+  /* background-color: #7d42ff; */
+  /* border-radius: 0 0 10px 10px; */
+  /* box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5); */
 }
 .form-container {
   display: flex;
@@ -38,7 +39,7 @@
 /* Set a max-width for the form container and center it horizontally */
 form {
   max-width: 500px;
-  width: 60%;
+  width: 55%;
   background-color: #242129;
   border-radius: 10px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
@@ -46,7 +47,7 @@ form {
 
 form h3 {
   padding: 4px;
-  margin: 0 0 10px 0;
+  margin: 0 0 16px 0;
   background: linear-gradient(90deg, #7d42ff 0%, #b055ff 100%);
   border-radius: 10px 10px 0 0;
   text-align: center;
@@ -140,12 +141,14 @@ input[type="text"]::placeholder {
 
 /* Style the merged text output */
 .merged-text {
-  width: 35%;
+  width: 40%;
   font-weight: 400;
   font-size: 1rem;
   background-color: #242129;
   border-radius: 10px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 1);
+  height: 100%;
+  padding-bottom: 0.75rem;
 }
 
 .merged-text h3 {
@@ -157,9 +160,16 @@ input[type="text"]::placeholder {
   font-weight: 700;
 }
 .merged-text p {
-  padding: 8px;
-  margin: 0;
+  padding: 16px;
   font-size: 0.75rem;
+}
+
+.merged-text span {
+  font-size: 0.5rem;
+  color: #999;
+  display: flex;
+  justify-content: end;
+  margin-right: 16px;
 }
 
 .clear-button {
