--- a/src/index.css
+++ b/src/index.css
@@ -139,7 +139,7 @@ input[type="text"]::placeholder {
   border-radius: 10px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 1);
   height: 100%;
-  padding-bottom: 0.75rem;
+  padding-bottom: 1rem;
 }
 
 .merged-text h3 {
@@ -153,14 +153,6 @@ input[type="text"]::placeholder {
 .merged-text p {
   padding: 16px;
   font-size: 0.75rem;
-}
-
-.merged-text span {
-  font-size: 0.5rem;
-  color: #999;
-  display: flex;
-  justify-content: end;
-  margin-right: 16px;
 }
 
 .clear-button {
@@ -179,4 +171,34 @@ input[type="text"]::placeholder {
   flex-direction: row;
   justify-content: space-between;
   margin: 0.25rem 0.5rem 1rem 0.5rem;
+}
+
+.merged-text-bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: end;
+}
+
+.duration-span {
+  font-size: 0.5rem;
+  color: #999;
+  margin: 0 1rem 0 1rem;
+}
+
+.saved-span {
+  font-size: 0.5rem;
+  color: #999;
+}
+
+.save-button {
+  background-color: #7d42ff;
+  color: white;
+  border: none;
+  padding: 8px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 0.75rem;
+  transition: all 0.2s ease-in-out;
+  margin: 0 1rem 0 1rem;
 }
