Minor style changes

--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@ form {
   background-color: #242129;
   border-radius: 10px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+  height: 100%;
 }
 
 form h3 {
@@ -91,10 +92,6 @@ input[type="text"]::placeholder {
   transition: all 0.2s ease-in-out;
 }
 
-.add-text-button:hover {
-  background-color: #5f21e3;
-}
-
 .remove-text-button {
   background-color: #7d42ff;
   color: white;
@@ -107,10 +104,6 @@ input[type="text"]::placeholder {
   transition: all 0.2s ease-in-out;
 }
 
-.remove-text-button:hover {
-  background-color: #5f21e3;
-}
-
 .submit-button {
   background-color: #7d42ff;
   color: white;
@@ -120,10 +113,6 @@ input[type="text"]::placeholder {
   cursor: pointer;
   font-size: 0.75rem;
   transition: all 0.2s ease-in-out;
-}
-
-.submit-button:hover {
-  background-color: #5f21e3;
 }
 
 .submit-button:disabled {
@@ -201,4 +190,8 @@ input[type="text"]::placeholder {
   font-size: 0.75rem;
   transition: all 0.2s ease-in-out;
   margin: 0 1rem 0 1rem;
+}
+
+button:hover {
+  background-color: #5f21e3;
 }
