--- a/src/index.css
+++ b/src/index.css
@@ -17,15 +17,30 @@
 }
 
 .navbar {
-  margin-top: 4px;
+  margin: 0.5rem;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
   padding: 0 1rem;
-  height: 2rem;
+  height: 3rem;
   font-weight: 900;
 }
+
+.navbar h3 {
+  margin-right: 3rem;
+}
+
+.navbar a {
+  margin-left: 1rem;
+  text-decoration: none;
+  color: #fff;
+  transition: all 0.2s ease-in-out;
+}
+
+.navbar a:hover {
+  color: #b987ff;
+}
+
 .form-container {
   display: flex;
   flex-direction: row;
@@ -34,12 +49,13 @@
 }
 
 form {
-  max-width: 500px;
-  width: 55%;
+  max-width: 700px;
+  width: 60%;
   background-color: #242129;
   border-radius: 10px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
   height: 100%;
+  margin: 0.5rem;
 }
 
 form h3 {
@@ -49,12 +65,6 @@ form h3 {
   border-radius: 10px 10px 0 0;
   text-align: center;
   font-weight: 700;
-}
-
-label {
-  display: block;
-  margin-bottom: 5px;
-  font-size: 16px;
 }
 
 .text-inputs {
@@ -70,7 +80,7 @@ input[type="text"] {
   margin-bottom: 10px;
   width: 100%;
   height: 32px;
-  font-size: 0.75rem;
+  font-size: 1rem;
   padding: 0 10px;
 }
 input[type="text"]:focus {
@@ -88,7 +98,7 @@ input[type="text"]::placeholder {
   padding: 8px 16px;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 0.75rem;
+
   transition: all 0.2s ease-in-out;
 }
 
@@ -100,7 +110,7 @@ input[type="text"]::placeholder {
   margin: 0 0 10px 4px;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 0.75rem;
+
   transition: all 0.2s ease-in-out;
 }
 
@@ -111,7 +121,7 @@ input[type="text"]::placeholder {
   padding: 8px;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 0.75rem;
+
   transition: all 0.2s ease-in-out;
 }
 
@@ -123,12 +133,13 @@ input[type="text"]::placeholder {
 .merged-text {
   width: 40%;
   font-weight: 400;
-  font-size: 1rem;
+
   background-color: #242129;
   border-radius: 10px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 1);
   height: 100%;
   padding-bottom: 1rem;
+  margin: 0.5rem;
 }
 
 .merged-text h3 {
@@ -140,8 +151,10 @@ input[type="text"]::placeholder {
   font-weight: 700;
 }
 .merged-text p {
-  padding: 16px;
-  font-size: 0.75rem;
+  margin: 1rem;
+  padding: 1rem;
+  background-color: #000000;
+  border-radius: 10px;
 }
 
 .clear-button {
@@ -151,7 +164,7 @@ input[type="text"]::placeholder {
   padding: 8px;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 0.75rem;
+
   transition: all 0.2s ease-in-out;
 }
 
@@ -187,11 +200,102 @@ input[type="text"]::placeholder {
   padding: 8px;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 0.75rem;
+
   transition: all 0.2s ease-in-out;
   margin: 0 1rem 0 1rem;
 }
 
 button:hover {
   background-color: #5f21e3;
+}
+
+.collection {
+  width: 80%;
+  margin: 1rem;
+  padding: 0.5rem;
+}
+
+.collection ul {
+  padding: 0;
+  flex-wrap: wrap;
+}
+
+.collection li {
+  display: flex;
+  flex-direction: column;
+  margin: 0 0 0.5rem 0;
+  padding: 0.75rem;
+  list-style: none;
+  border-radius: 10px;
+  background-color: #423e4b;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.collection li li {
+  background-color: #11111a;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+}
+
+.collection li span {
+  display: flex;
+  flex-direction: column;
+}
+
+.collection li:hover {
+  cursor: pointer;
+}
+
+.collection li.selected {
+  background-color: #6d4e92;
+}
+
+.scroll-up-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #7d42ff;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 70%;
+  cursor: pointer;
+  font-size: 1.5rem;
+  transition: all 0.2s ease-in-out;
+}
+@media screen and (max-width: 768px) {
+  .text-inputs {
+    flex-direction: column;
+  }
+  [type="submit"],
+  [type="button"] {
+    padding: 8px;
+    margin: 1px;
+  }
+  .save-button {
+    margin-left: 1rem;
+  }
+}
+@media screen and (max-width: 481px) {
+  * {
+    font-size: 1rem;
+  }
+  .text-inputs {
+    flex-direction: column;
+  }
+  .collection {
+    width: 100%;
+  }
+
+  [type="submit"],
+  [type="button"] {
+    padding: 4px 7px;
+    font-size: 0.65rem;
+    margin: 1px;
+  }
+
+  .save-button {
+    margin-left: 1rem;
+  }
 }
