--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,7 @@ form h3 {
   display: flex;
   flex-direction: row;
   margin-bottom: 2px;
-  padding: 0 10px;
+  padding: 0 1rem;
 }
 
 input[type="text"] {
@@ -171,7 +171,8 @@ input[type="text"]::placeholder {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 0.25rem 0.5rem 1rem 0.5rem;
+  margin: 0.25rem 0 1rem 0;
+  padding: 0 1rem;
 }
 
 .merged-text-bottom {
@@ -193,13 +194,12 @@ input[type="text"]::placeholder {
 }
 
 .save-button {
-  background-color: #7d42ff;
+  background-color: #6d4e92;
   color: white;
   border: none;
   padding: 0.5rem;
   border-radius: 4px;
   cursor: pointer;
-
   transition: all 0.2s ease-in-out;
   margin: 0 1rem 0 1rem;
 }
