--- a/src/index.css
+++ b/src/index.css
@@ -232,7 +232,7 @@ button:hover {
 
 .collection div li {
   margin: 0 0 0.5rem 0;
-  padding: 0.75rem;
+  padding: 0.5rem 0.75rem;
   background-color: #11111a;
   border-radius: 10px;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
